--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.8.4",
+    "axios": "^1.13.5",
+    "form-data": "^4.0.4",
     "next": "^16.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "9.24.0",
-    "eslint-config-next": "15.3.0",
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^16.1.6",
     "sass": "^1.86.3",
     "tailwindcss": "^4",
     "typescript": "^5"
